# OpenOS

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  gui.py  main.py  pyproject.toml  requirements.txt  setup.py  test_e2e.sh  window.py
api/: qmp.py  server.py
examples/: e1_move_and_right_click.py  s1_send_input.py
openos/: __init__.py  guest.py  host.py  input_mappings.py  pygame.py  utils.py  window.py
openos/interfaces/: __init__.py  headless.py  interface.py  pygame.py
openos/scripts/: s2_stream_test.py  s3_websocket_test.py  s4_stream_websocket_test.py  setup.sh  socket_test.py  stream_test.py  stream_websocket.test.py  stream_websocket_test.py  ubuntu-setup.sh  websocket_test.py
scripts/: entry.sh  openos-guest.service
sdk/: openos.py  pyproject.toml
services/: constants.py  controller.py  log_setup.py  server.py
src/: config.sh
