[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openos"
version = "0.0.1"
description = "OpenOS is a Python interactable operating system for both human and AI agents."
authors = [
  { name="Eddy Liang", email="eddyliang216@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy==2.2.3",
  "pynput==1.7.8",
  "requests==2.32.3",
  "tqdm==4.67.1",
  "colorlog==6.9.0",
  "mss==10.0.0",
  "opencv-python==4.11.0.86",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Homepage" = "https://github.com/Emericen/openos.git"
"Bug Tracker" = "https://github.com/Emericen/openos/issues"
